fixes highlighted alignment

--- a/src/components/Board.scss
+++ b/src/components/Board.scss
@@ -25,7 +25,7 @@
         border: 3px solid darkslategrey;
         margin: 1% auto;
         background: #000FB7;
-
+        text-align:center;
         border-radius:50%;
         color: #EAE133;
         padding:20px;
